name:                PlEb
version:             0.1.0
synopsis:            A simple tool to edit and export playlists
homepage:            https://github.com/githubuser/PlEb#readme
license:             GPL-3
license-file:        LICENSE
author:              Franco Costantini <franco.costantini20@gmail.com>
build-type:          Simple
cabal-version:       >=1.10

executable PlEb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, xml
