name:                PlEb
version:             1.0.0
synopsis:            A simple tool to edit and export playlists
license:             GPL-3
license-file:        LICENSE
author:              Franco Costantini <fcostantini@dcc.fceia.unr.edu.ar>
build-type:          Simple
cabal-version:       >=1.20

executable PlEb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, xml, directory, filepath, strict, parsec, network-uri
